# clogger

./: .gitignore  CMakeLists.txt  index.js  package.json
lib/: ExecutableModule.js
scripts/: build.js  vcbuild.bat
src/: main.cpp
